--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.2.1
   animated_splash_screen: ^1.3.0
+  location: ^6.0.1
+  awesome_snackbar_content: ^0.1.3
+  logger: ^2.2.0
+  platform_maps_flutter: ^1.0.2
 
 dev_dependencies:
   flutter_test:
