--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   logger: ^2.2.0
   platform_maps_flutter: ^1.0.2
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
