--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   logger: ^2.2.0
   platform_maps_flutter: ^1.0.2
   animate_do: ^3.3.4
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
+  sign_in_with_apple: ^6.1.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
