--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,8 +48,19 @@ dependencies:
   sign_in_with_apple: ^6.1.0
   google_sign_in: ^6.2.1
   card_swiper: ^3.0.1
+  image_picker: ^1.1.1
 
+  http: any
+  google_mlkit_image_labeling: ^0.12.0
+  lottie: ^3.1.2
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.3
+  camera: ^0.11.0
+  multi_dropdown: ^2.1.4
 dev_dependencies:
+  isar_generator: ^3.1.0+1
+  build_runner: any
   flutter_test:
     sdk: flutter
 
