--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   path_provider: ^2.1.3
   camera: ^0.11.0
   multi_dropdown: ^2.1.4
+  palette_generator: ^0.3.3+3
+  flex_color_picker: ^3.5.0
 dev_dependencies:
   isar_generator: ^3.1.0+1
   build_runner: any
