--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   multi_dropdown: ^2.1.4
   palette_generator: ^0.3.3+3
   flex_color_picker: ^3.5.0
+  just_audio: ^0.9.38
+  colornames: ^0.1.0
 dev_dependencies:
   isar_generator: ^3.1.0+1
   build_runner: any
